--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,7 +16,13 @@
     "cross-env": "^5.2.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "ip": "^1.1.5"
+    "http-status-codes": "^1.3.0",
+    "ip": "^1.1.5",
+    "morgan": "^1.9.1",
+    "swagger-jsdoc": "^3.2.3",
+    "swagger-stats": "^0.95.6",
+    "swagger-ui-express": "^4.0.1",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.6"
