--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,6 +19,7 @@
     "http-status-codes": "^1.3.0",
     "ip": "^1.1.5",
     "morgan": "^1.9.1",
+    "mysql": "^2.16.0",
     "swagger-jsdoc": "^3.2.3",
     "swagger-stats": "^0.95.6",
     "swagger-ui-express": "^4.0.1",
